resolved red warnings about unique "keys"

--- a/src/index.css
+++ b/src/index.css
@@ -101,3 +101,11 @@ footer {
     height: 25px;
     margin-right: 20px;
 }
+
+.sequence-panel {
+    text-align: center;
+}
+
+.sequence-panel button {
+    margin-right: 5px;
+}
