--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ header {
     align-items: center;
     min-height: 7vh;
     background-color: #2A6041;
+    font-size: 2vh;
     color: whitesmoke;
 }
 
@@ -30,13 +31,14 @@ footer {
     text-align: center;
     background-color: #2A6041;
     color: whitesmoke;
+    font-size: 2vh;
 }
 
 .fretboard-app {
     min-height: 88vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .mobile-ui {
@@ -47,26 +49,29 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
+    margin-top: 1vh;
+    gap: 1vw;
 }
 
 .info {
     display: flex;
     flex-direction: column;
-    text-align: center;
-    padding: 3px;
+    /* padding: 0.5vw; */
     justify-content:space-evenly;
-    box-sizing: content-box;
-    min-width: 125px;
-    height: 125px;
+    align-items: center;
+    align-self: flex-start;
+    min-width: 10vw;
+    height: 10vw;
     background-color: #E9E9ED;
-    border-radius: 10px;
+    border-radius: 1vw;
+    font-size: 2.1vh;
 }
 
 .sequence {
     margin: 10px auto;
-    max-width: 600px;
-    font-size: 26px;
+    max-width: 60vw;
+    font-size: 3vh;
     text-align: center;
 }
 
@@ -83,7 +88,8 @@ footer {
 }
 
 .fretNumContainer {
-    min-width: 52px;
+    min-width: 3.6vw;
+    font-size: 2vh;
     display: inline-block;
     text-align: center;
 }
@@ -97,22 +103,25 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 32px;
-    height: 32px;
-    border-radius: 16px;
+    width: 4vh;
+    height: 4vh;
+    border-radius: 2vh;
     color: whitesmoke;
+    font-size: 2vh;
     position: relative;
-    top: 20px;
+    top: 3vh;
 }
 
 .noteContainer {
         display: flex;
         justify-content: center;
         align-items: center;
-        min-width: 50px;
-        min-height: 40px;
+        box-sizing: border-box;
+        min-width: 3.05vw;
+        width: 3.6vw;
+        min-height: 6vh;
         border-right: solid whitesmoke 2px;
-        border-bottom: solid black;
+        border-bottom: solid black 0.2vh;
 }
 
 .string {
@@ -126,10 +135,10 @@ footer {
 
 .open-string {
     position: relative;
-    top: 15px;
+    top: 3vh;
     border: none;
-    font-size: 25px;
-    width: 75px;
+    font-size: 3vh;
+    width: 3vw;
 }
 
 @media screen and (max-width: 650px) {
@@ -215,56 +224,62 @@ main, [id$="note0"], [id="string0"], .open-string {
 background-color: whitesmoke;
 }
 
-.select-instrument {
+.select-instrument, .select-note, .select-sequence, .sequence-panel {
     display: flex;
-    margin: 10px 0;
+    margin-bottom: 1vh;
     justify-content: center;
+    gap: 0.5vw;
 }
 
 .select-instrument button {
-    height: 40px;
-    width: 120px;
-    margin-right: 20px;
+    height: 5vh;
+    width: 12vw;
+    /* margin-right: 20px; */
+    font-size: 2vh;
 }
 
-.select-note {
+/* .select-note {
     text-align: center;
-}
+} */
 
 .select-note button {
-    width: 30px;
-    height: 30px;
-    margin-right: 15px;
+    width: 3vw;
+    height: 3vw;
+    font-size: 2vh;
+    /* margin-right: 15px; */
 }
 
-.select-sequence {
+/* .select-sequence {
     text-align: center;
     margin: 10px 0;
-}
+} */
 
 .select-sequence button {
-    width: 120px;
-    height: 25px;
-    margin-right: 20px;
+    width: 10vw;
+    height: 4vh;
+    /* margin-right: 20px; */
+    font-size: 2vh;
 }
 
-.sequence-panel {
+/* .sequence-panel {
     text-align: center;
-}
+} */
 
 .sequence-panel button {
-    margin-right: 5px;
+    /* margin-right: 5px; */
+    font-size: 2vh;
+    padding: 0.5vh;
 }
 
 button {
     color: black;
     border: none;
-    border-radius: 5px;
+    border-radius: 1vh;
 }
 
-.sequence-name-buttons {
+/* .sequence-name-buttons {
     padding: 3px;
-}
+} */
 
 button:hover {
     background-color: #2A6041;
