--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 7vh;
+    min-height: 10vh;
     background-color: #2A6041;
     font-size: 2vh;
     color: whitesmoke;
@@ -35,7 +35,7 @@ footer {
 }
 
 .fretboard-app {
-    min-height: 88vh;
+    min-height: 85vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -62,10 +62,12 @@ footer {
     align-items: center;
     align-self: flex-start;
     min-width: 10vw;
-    height: 10vw;
+    min-height: 10vw;
+    max-width: 13vw;
+    max-height: 13vw;
     background-color: #E9E9ED;
     border-radius: 1vw;
-    font-size: 2.1vh;
+    font-size: 1.5vw;
 }
 
 .sequence {
@@ -88,7 +90,8 @@ footer {
 }
 
 .fretNumContainer {
-    min-width: 3.6vw;
+    min-width: 3.2vw;
+    width: 3.6vw;
     font-size: 2vh;
     display: inline-block;
     text-align: center;
@@ -99,17 +102,31 @@ footer {
     justify-content: flex-end;
 }
 
-.note {
+.note, .root-note {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 4vh;
-    height: 4vh;
-    border-radius: 2vh;
     color: whitesmoke;
-    font-size: 2vh;
     position: relative;
-    top: 3vh;
+    top: 1.6vw;
+    font-size: 1.2vw;
+
+
+}
+
+.note {
+    width: 2.4vw;
+    height: 2.4vw;
+    border-radius: 1.2vw;
+}
+
+.root-note {
+
+    width: 2.5vw;
+    height: 2.5vw;
+    border-radius: 1.25vw;
+    border:solid 0.15vw;
+
 }
 
 .noteContainer {
@@ -117,16 +134,17 @@ footer {
         justify-content: center;
         align-items: center;
         box-sizing: border-box;
-        min-width: 3.05vw;
+        min-width: 3.2vw;
         width: 3.6vw;
-        min-height: 6vh;
+        height: 3.2vw;
         border-right: solid whitesmoke 2px;
-        border-bottom: solid black 0.2vh;
+        /* border-bottom: solid black 0.2vh; */
 }
 
 .string {
     display: flex;
     background-color: burlywood;
+    border-bottom: solid 0.3vh;
 }
 
 .string-container {
@@ -135,7 +153,7 @@ footer {
 
 .open-string {
     position: relative;
-    top: 3vh;
+    top: 1.6vw;
     border: none;
     font-size: 3vh;
     width: 3vw;
@@ -165,33 +183,51 @@ footer {
     .string {
         flex-direction: column;
         border-left: solid;
+        border-bottom: none;
 
     }
 
     .open-string {
-        width: 40px;
-        height: 40px;
-        left: -15px;
+        width: 10vw;
+        height: 5vh;
+        left: -5vw;
         top: 0;
         text-align: center;
     }
     .noteContainer {
-        min-width: 40px;
-        min-height: 50px;
+        width: 10vw;
+        height: 12vw;
         border: none;
+        box-sizing: border-box;
         border-bottom: whitesmoke solid 2px;
     }
 
     .note {
-        left: -20px;
+        width: 6vw;
+        height: 6vw;
+        border-radius: 3vw;
+        font-size: 3vw;
+        left: -5vw;
+        top: 0;
+    }
+
+    .root-note {
+        width: 7vw;
+        height: 7vw;
+        border-radius: 3.5vw;
+        font-size: 3vw;
+        left: -5vw;
         top: 0;
     }
 
     .fretNumContainer {
         display: flex;
+        align-items: flex;
+        justify-content: center;
         align-items: center;
-        height: 50px;
-        border: none;
+        height: 12vw;
+        width: 15vw;
+        box-sizing: border-box;
     }
     .ui-and-info {
         display: none;
@@ -204,15 +240,19 @@ footer {
     }
     .dropdown {
         min-width: 50%;
-        flex: 1;
-        height: 30px;
-        font-size: 20px;
+        /* flex: 1; */
+        box-sizing: border-box;
+        height: 5vw;
+        font-size: 3vw;
         text-align: center;
         background-color: #2A6041;
         color: whitesmoke;
         border: none;
         border-bottom: whitesmoke solid 1px;
         border-right: whitesmoke solid 1px;
+    }
+    .sequence {
+        font-size: 5vh;
     }
 }
 
@@ -232,10 +272,10 @@ background-color: whitesmoke;
 }
 
 .select-instrument button {
-    height: 5vh;
+    height: 3vw;
     width: 12vw;
     /* margin-right: 20px; */
-    font-size: 2vh;
+    font-size: 1.3vw;
 }
 
 /* .select-note {
@@ -243,9 +283,9 @@ background-color: whitesmoke;
 } */
 
 .select-note button {
-    width: 3vw;
-    height: 3vw;
-    font-size: 2vh;
+    width: 2.5vw;
+    height: 2.5vw;
+    font-size: 1vw;
     /* margin-right: 15px; */
 }
 
@@ -256,9 +296,9 @@ background-color: whitesmoke;
 
 .select-sequence button {
     width: 10vw;
-    height: 4vh;
+    height: 2vw;
     /* margin-right: 20px; */
-    font-size: 2vh;
+    font-size: 1vw;
 }
 
 /* .sequence-panel {
@@ -267,14 +307,14 @@ background-color: whitesmoke;
 
 .sequence-panel button {
     /* margin-right: 5px; */
-    font-size: 2vh;
-    padding: 0.5vh;
+    font-size: 1vw;
+    padding: 0.25vw;
 }
 
 button {
     color: black;
     border: none;
-    border-radius: 1vh;
+    border-radius: 0.5vw;
 }
 
 /* .sequence-name-buttons {
@@ -285,4 +325,9 @@ button:hover {
     background-color: #2A6041;
     border: none;
     color: whitesmoke;
+}
+
+.empty-block {
+    min-height: 5vh;
+    /* height: 10vh; */
 }
