--- a/src/index.css
+++ b/src/index.css
@@ -331,3 +331,215 @@ button:hover {
 .empty-block {
     min-height: 5vh;
 }
+
+.circle-of-fifths-container {
+    display: grid;
+    width: 40vw;
+    height: 40vw;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    border: dotted;
+    border-radius: 20vw;
+}
+
+.circle-element {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    text-align: center;
+    position: relative;
+    border: solid lightblue;
+    /* justify-items: center; */
+}
+
+#scale-C {
+    grid-column: 3;
+    grid-row: 1;
+}
+
+#outer-scale-C {
+    grid-row: 1;
+    grid-column: 2;
+}
+#inner-scale-C {
+    grid-row: 3;
+    grid-column: 2;
+}
+
+#scale-G {
+    grid-row: 1;
+    grid-column: 4;
+    top: 3vw;
+    /* left: -2vw; */
+}
+#outer-scale-G {
+    grid-row: 1;
+    grid-column: 3;
+}
+#inner-scale-G {
+    grid-row: 3;
+    grid-column: 1;
+}
+
+#scale-D {
+    grid-row: 2;
+    grid-column: 5;
+    left: -3vw;
+}
+
+#outer-scale-D {
+    grid-row: 1;
+    grid-column: 3;
+}
+#inner-scale-D {
+    grid-row: 3;
+    grid-column: 1;
+}
+
+#scale-A {
+    grid-row: 3;
+    grid-column: 5;
+}
+
+#outer-scale-A {
+    grid-row: 2;
+    grid-column: 3;
+}
+
+#inner-scale-A {
+    grid-row: 2;
+    grid-column: 1;
+}
+
+#scale-E {
+    grid-row: 4;
+    grid-column: 5;
+    left: -3vw;
+}
+
+#outer-scale-E {
+    grid-row: 3;
+    grid-column: 3;
+}
+
+#inner-scale-E {
+    grid-row: 1;
+    grid-column: 1;
+}
+
+#scale-B {
+    grid-row: 5;
+    grid-column: 4;
+    top: -3vw;
+}
+
+#outer-scale-B {
+    grid-row: 3;
+    grid-column: 3;
+}
+
+#innder-scale-B {
+    grid-row: 1;
+    grid-column: 1;
+}
+
+#scale-F-sharp {
+    grid-row: 5;
+    grid-column: 3;
+}
+
+#outer-scale-F-sharp {
+    grid-row: 3;
+    grid-column: 2;
+}
+
+#inner-scale-F-sharp {
+    grid-row: 1;
+    grid-column: 2;
+}
+
+#scale-D-flat {
+    grid-row: 5;
+    grid-column: 2;
+    top: -3vw;
+}
+
+#outer-scale-D-flat {
+    grid-row: 3;
+    grid-column: 1;
+}
+
+#inner-scale-D-flat {
+    grid-row: 1;
+    grid-column: 3;
+}
+
+#scale-A-flat {
+    grid-row: 4;
+    grid-column: 1;
+    left: 3vw;
+}
+
+#outer-scale-A-flat {
+    grid-row: 3;
+    grid-column: 1;
+}
+
+#inner-scale-A-flat {
+    grid-row: 1;
+    grid-column: 3;
+}
+
+#scale-E-flat {
+    grid-row: 3;
+    grid-column: 1;
+}
+
+#outer-scale-E-flat {
+    grid-row: 2;
+    grid-column: 1;
+}
+
+#inner-scale-E-flat {
+    grid-row: 2;
+    grid-column: 3;
+}
+
+#scale-B-flat {
+    grid-row: 2;
+    grid-column: 1;
+    left: 3vw;
+}
+
+#outer-scale-B-flat {
+    grid-row: 1;
+    grid-column: 1;
+}
+
+#inner-scale-B-flat {
+    grid-row: 3;
+    grid-column: 3;
+}
+
+#scale-F {
+    grid-row: 1;
+    grid-column: 2;
+    top: 3vw;
+}
+
+#outer-scale-F {
+    grid-row: 1;
+    grid-column: 1;
+}
+
+#inner-scale-F {
+    grid-row: 3;
+    grid-column: 3;
+}
+
+.inner-circle {
+    /* border: solid red; */
+    border-radius: 100vw;
+    grid-row: 2 / 5;
+    grid-column: 2 / 5;
+}
