--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,8 @@ header {
 
 footer {
     display: flex;
+    gap: 20px;
+    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
     min-height: 5vh;
@@ -29,6 +31,15 @@ footer {
     background-color: #2A6041;
     color: whitesmoke;
     font-size: 2vh;
+}
+
+.repository-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    color: whitesmoke;
+    text-decoration: none;
 }
 
 .fretboard-app {
