--- a/src/index.css
+++ b/src/index.css
@@ -1,556 +1,555 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
 body {
-    display: flex; 
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
-
 header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 10vh;
-    background-color: #2A6041;
-    font-size: 2vh;
-    color: whitesmoke;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 10vh;
+  background-color: #2a6041;
+  font-size: 2vh;
+  color: whitesmoke;
 }
 
 footer {
-    display: flex;
-    gap: 20px;
-    /* flex-direction: column; */
-    justify-content: center;
-    align-items: center;
-    min-height: 5vh;
-    text-align: center;
-    background-color: #2A6041;
-    color: whitesmoke;
-    font-size: 2vh;
+  display: flex;
+  gap: 20px;
+  /* flex-direction: column; */
+  justify-content: center;
+  align-items: center;
+  min-height: 5vh;
+  text-align: center;
+  background-color: #2a6041;
+  color: whitesmoke;
+  font-size: 2vh;
 }
 
 .repository-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    color: whitesmoke;
-    text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: whitesmoke;
+  text-decoration: none;
 }
 
 .fretboard-app {
-    min-height: 85vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  min-height: 85vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .sequence {
-    margin: 0 auto;
-    max-width: 90vw;
-    font-size: 4vh;
-    text-align: center;
+  margin: 0 auto;
+  max-width: 90vw;
+  font-size: 4vh;
+  text-align: center;
 }
 
 .inner-instrument-container {
-    display: flex;
+  display: flex;
 }
 
 .fretboard {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 .string {
-    display: flex;
-    background-color: burlywood;
-    border-bottom: solid 0.3vh;
+  display: flex;
+  background-color: burlywood;
+  border-bottom: solid 0.3vh;
 }
 
-
 .ui-and-info {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-top: 1vh;
-    gap: 1vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 1vh;
+  gap: 1vw;
 }
 
 .info {
-    display: flex;
-    flex-direction: column;
-    justify-content:space-evenly;
-    align-items: center;
-    align-self: flex-start;
-    min-width: 10vw;
-    min-height: 10vw;
-    max-width: 13vw;
-    max-height: 13vw;
-    background-color: #E9E9ED;
-    border-radius: 1vw;
-    font-size: 1.1vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  align-self: flex-start;
+  min-width: 10vw;
+  min-height: 10vw;
+  max-width: 13vw;
+  max-height: 13vw;
+  background-color: #e9e9ed;
+  border-radius: 1vw;
+  font-size: 1.1vw;
 }
 
 .fretNumContainer {
-    min-width: 3.2vw;
-    width: 3.6vw;
-    font-size: 2vh;
-    display: inline-block;
-    text-align: center;
+  min-width: 3.2vw;
+  width: 3.6vw;
+  font-size: 2vh;
+  display: inline-block;
+  text-align: center;
 }
 
 .fretNumbers {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 2%;
+  align-items: end;
 }
 
-.note, .root-note {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: whitesmoke;
-    position: relative;
-    top: 1.6vw;
-    font-size: 1.2vw;
-
-
+.note,
+.root-note {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: whitesmoke;
+  position: relative;
+  top: 1.6vw;
+  font-size: 1.2vw;
 }
 
 .note {
-    width: 2.4vw;
-    height: 2.4vw;
-    border-radius: 1.2vw;
+  width: 2.4vw;
+  height: 2.4vw;
+  border-radius: 1.2vw;
 }
 
 .root-note {
-
-    width: 2.5vw;
-    height: 2.5vw;
-    border-radius: 1.25vw;
-    border:solid 0.15vw;
-
+  width: 2.5vw;
+  height: 2.5vw;
+  border-radius: 1.25vw;
+  border: solid 0.15vw;
 }
 
 .noteContainer {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        box-sizing: border-box;
-        min-width: 3.2vw;
-        width: 3.6vw;
-        height: 3.2vw;
-        border-right: solid whitesmoke 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  min-width: 3.2vw;
+  width: 3.6vw;
+  height: 3.2vw;
+  border-right: solid whitesmoke 2px;
 }
 
 .string-container {
-    display: flex;
+  display: flex;
 }
 
 .open-string {
-    position: relative;
-    top: 1.6vw;
-    border: none;
-    font-size: 3vh;
-    width: 3vw;
+  position: relative;
+  top: 1.6vw;
+  border: none;
+  font-size: 3vh;
+  width: 3vw;
 }
 
 .mobile-ui {
-    display: none;
-    flex-direction: row;
-    flex-wrap: wrap;
-    min-width: 100vw;
+  display: none;
+  flex-direction: row;
+  flex-wrap: wrap;
+  min-width: 100vw;
 }
 
 .dropdown {
-    min-width: 50%;
-    box-sizing: border-box;
-    height: 6vh;
-    font-size: 5vw;
-    text-align: center;
-    background-color: #2A6041;
-    color: whitesmoke;
-    border: none;
-    border-bottom: whitesmoke solid 1px;
-    border-right: whitesmoke solid 1px;
+  min-width: 50%;
+  box-sizing: border-box;
+  height: 6vh;
+  font-size: 5vw;
+  text-align: center;
+  background-color: #2a6041;
+  color: whitesmoke;
+  border: none;
+  border-bottom: whitesmoke solid 1px;
+  border-right: whitesmoke solid 1px;
 }
 
 @media only screen and (orientation: landscape) {
- 
-
-    @media only screen and (max-width: 1024px) {
-        .fretboard-app {
-            min-height: 95vh;
-        }
-        .ui-and-info {
-            display: none;
-        }
-        .mobile-ui {
-            display: flex;
-            flex-wrap: nowrap;
-        }
-        .dropdown {
-            min-width: 25vw;
-        }
-        header {
-            display: none;
-        }
-        .dropdown {
-            height: 10vh;
-            font-size: 3.8vh;
-        }
-    }
-        
-}
-
-
-@media screen and (orientation: portrait){
-    header {
-        display: none;
-    }
-
-    .fretboard {
-        display: flex;
-        flex-direction: row;
-    }
-
-    .fretNumbers {
-        flex-direction: column;
-    }
-
-    .neck {
-        display: flex;
-        flex-direction: row-reverse;
-    }
-    .string-container {
-        display: inline;
-    }
-    .string {
-        display: flex;
-        flex-direction: column;
-        border-left: solid;
-        border-bottom: none;
-
-    }
-
-    .open-string {
-        width: 10vw;
-        height: 5vh;
-        left: -5vw;
-        top: 0;
-        text-align: center;
-    }
-    .noteContainer {
-        width: 10vw;
-        height: 12vw;
-        border: none;
-        box-sizing: border-box;
-        border-bottom: whitesmoke solid 2px;
-    }
-
-    .note {
-        width: 6vw;
-        height: 6vw;
-        border-radius: 3vw;
-        font-size: 3vw;
-        left: -5vw;
-        top: 0;
-    }
-
-    .root-note {
-        width: 7vw;
-        height: 7vw;
-        border-radius: 3.5vw;
-        font-size: 3vw;
-        left: -5vw;
-        top: 0;
-    }
-
-    .fretNumContainer {
-        display: flex;
-        align-items: flex;
-        justify-content: center;
-        align-items: center;
-        height: 12vw;
-        width: 15vw;
-        box-sizing: border-box;
+  @media only screen and (max-width: 1024px) {
+    .fretboard-app {
+      min-height: 95vh;
     }
     .ui-and-info {
-        display: none;
+      display: none;
     }
     .mobile-ui {
-        display: flex;
+      display: flex;
+      flex-wrap: nowrap;
     }
-    .sequence {
-        font-size: 3.9vh;
-        padding: 3vh 0;
+    .dropdown {
+      min-width: 25vw;
     }
+    header {
+      display: none;
+    }
+    .dropdown {
+      height: 10vh;
+      font-size: 3.8vh;
+    }
+  }
+}
+
+@media screen and (orientation: portrait) {
+  header {
+    display: none;
+  }
+
+  .fretboard {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  .fretNumbers {
+    flex-direction: column;
+  }
+
+  .neck {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .string-container {
+    display: inline;
+  }
+  .string {
+    display: flex;
+    flex-direction: column;
+    border-left: solid;
+    border-bottom: none;
+  }
+
+  .open-string {
+    width: 10vw;
+    height: 5vh;
+    left: -5vw;
+    top: 0;
+    text-align: center;
+  }
+  .noteContainer {
+    width: 10vw;
+    height: 12vw;
+    border: none;
+    box-sizing: border-box;
+    border-bottom: whitesmoke solid 2px;
+  }
+
+  .note {
+    width: 6vw;
+    height: 6vw;
+    border-radius: 3vw;
+    font-size: 3vw;
+    left: -5vw;
+    top: 0;
+  }
+
+  .root-note {
+    width: 7vw;
+    height: 7vw;
+    border-radius: 3.5vw;
+    font-size: 3vw;
+    left: -5vw;
+    top: 0;
+  }
+
+  .fretNumContainer {
+    display: flex;
+    align-items: flex;
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 12vw;
+    width: 15vw;
+    box-sizing: border-box;
+  }
+  .ui-and-info {
+    display: none;
+  }
+  .mobile-ui {
+    display: flex;
+  }
+  .sequence {
+    font-size: 3.9vh;
+    padding: 3vh 0;
+  }
 }
 
 [visibility="false"] {
-    visibility: hidden;
+  visibility: hidden;
 }
 
-main, [id$="note0"], [id="string0"], .open-string {
-background-color: whitesmoke;
+main,
+[id$="note0"],
+[id="string0"],
+.open-string {
+  background-color: whitesmoke;
 }
 
-.select-instrument, .select-note, .select-sequence, .sequence-panel {
-    display: flex;
-    margin-bottom: 1vh;
-    justify-content: center;
-    gap: 0.5vw;
+.select-instrument,
+.select-note,
+.select-sequence,
+.sequence-panel {
+  display: flex;
+  margin-bottom: 1vh;
+  justify-content: center;
+  gap: 0.5vw;
 }
 
 .select-instrument button {
-    height: 3vw;
-    width: 12vw;
-    font-size: 0.9vw;
+  height: 3vw;
+  width: 12vw;
+  font-size: 0.9vw;
 }
 
 .select-note button {
-    width: 2.5vw;
-    height: 2.5vw;
-    font-size: 0.9vw;
+  width: 2.5vw;
+  height: 2.5vw;
+  font-size: 0.9vw;
 }
 
 .select-sequence button {
-    width: 10vw;
-    height: 2vw;
-    font-size: 0.9vw;
+  width: 10vw;
+  height: 2vw;
+  font-size: 0.9vw;
 }
 
 .sequence-panel button {
-    font-size: 0.9vw;
-    padding: 0.25vw;
+  font-size: 0.9vw;
+  padding: 0.25vw;
 }
 
 button {
-    color: black;
-    border: none;
-    border-radius: 0.5vw;
+  color: black;
+  border: none;
+  border-radius: 0.5vw;
 }
 
 button:hover {
-    background-color: #2A6041;
-    border: none;
-    color: whitesmoke;
+  background-color: #2a6041;
+  border: none;
+  color: whitesmoke;
 }
 
 .empty-block {
-    min-height: 5vh;
+  min-height: 5vh;
 }
 
 .circle-of-fifths-container {
-    display: grid;
-    width: 40vw;
-    height: 40vw;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    border: dotted;
-    border-radius: 20vw;
+  display: grid;
+  width: 40vw;
+  height: 40vw;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  border: dotted;
+  border-radius: 20vw;
 }
 
 .circle-element {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    text-align: center;
-    position: relative;
-    border: solid lightblue;
-    /* justify-items: center; */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  text-align: center;
+  position: relative;
+  border: solid lightblue;
+  /* justify-items: center; */
 }
 
 #scale-C {
-    grid-column: 3;
-    grid-row: 1;
+  grid-column: 3;
+  grid-row: 1;
 }
 
 #outer-scale-C {
-    grid-row: 1;
-    grid-column: 2;
+  grid-row: 1;
+  grid-column: 2;
 }
 #inner-scale-C {
-    grid-row: 3;
-    grid-column: 2;
+  grid-row: 3;
+  grid-column: 2;
 }
 
 #scale-G {
-    grid-row: 1;
-    grid-column: 4;
-    top: 3vw;
-    /* left: -2vw; */
+  grid-row: 1;
+  grid-column: 4;
+  top: 3vw;
+  /* left: -2vw; */
 }
 #outer-scale-G {
-    grid-row: 1;
-    grid-column: 3;
+  grid-row: 1;
+  grid-column: 3;
 }
 #inner-scale-G {
-    grid-row: 3;
-    grid-column: 1;
+  grid-row: 3;
+  grid-column: 1;
 }
 
 #scale-D {
-    grid-row: 2;
-    grid-column: 5;
-    left: -3vw;
+  grid-row: 2;
+  grid-column: 5;
+  left: -3vw;
 }
 
 #outer-scale-D {
-    grid-row: 1;
-    grid-column: 3;
+  grid-row: 1;
+  grid-column: 3;
 }
 #inner-scale-D {
-    grid-row: 3;
-    grid-column: 1;
+  grid-row: 3;
+  grid-column: 1;
 }
 
 #scale-A {
-    grid-row: 3;
-    grid-column: 5;
+  grid-row: 3;
+  grid-column: 5;
 }
 
 #outer-scale-A {
-    grid-row: 2;
-    grid-column: 3;
+  grid-row: 2;
+  grid-column: 3;
 }
 
 #inner-scale-A {
-    grid-row: 2;
-    grid-column: 1;
+  grid-row: 2;
+  grid-column: 1;
 }
 
 #scale-E {
-    grid-row: 4;
-    grid-column: 5;
-    left: -3vw;
+  grid-row: 4;
+  grid-column: 5;
+  left: -3vw;
 }
 
 #outer-scale-E {
-    grid-row: 3;
-    grid-column: 3;
+  grid-row: 3;
+  grid-column: 3;
 }
 
 #inner-scale-E {
-    grid-row: 1;
-    grid-column: 1;
+  grid-row: 1;
+  grid-column: 1;
 }
 
 #scale-B {
-    grid-row: 5;
-    grid-column: 4;
-    top: -3vw;
+  grid-row: 5;
+  grid-column: 4;
+  top: -3vw;
 }
 
 #outer-scale-B {
-    grid-row: 3;
-    grid-column: 3;
+  grid-row: 3;
+  grid-column: 3;
 }
 
 #innder-scale-B {
-    grid-row: 1;
-    grid-column: 1;
+  grid-row: 1;
+  grid-column: 1;
 }
 
 #scale-F-sharp {
-    grid-row: 5;
-    grid-column: 3;
+  grid-row: 5;
+  grid-column: 3;
 }
 
 #outer-scale-F-sharp {
-    grid-row: 3;
-    grid-column: 2;
+  grid-row: 3;
+  grid-column: 2;
 }
 
 #inner-scale-F-sharp {
-    grid-row: 1;
-    grid-column: 2;
+  grid-row: 1;
+  grid-column: 2;
 }
 
 #scale-D-flat {
-    grid-row: 5;
-    grid-column: 2;
-    top: -3vw;
+  grid-row: 5;
+  grid-column: 2;
+  top: -3vw;
 }
 
 #outer-scale-D-flat {
-    grid-row: 3;
-    grid-column: 1;
+  grid-row: 3;
+  grid-column: 1;
 }
 
 #inner-scale-D-flat {
-    grid-row: 1;
-    grid-column: 3;
+  grid-row: 1;
+  grid-column: 3;
 }
 
 #scale-A-flat {
-    grid-row: 4;
-    grid-column: 1;
-    left: 3vw;
+  grid-row: 4;
+  grid-column: 1;
+  left: 3vw;
 }
 
 #outer-scale-A-flat {
-    grid-row: 3;
-    grid-column: 1;
+  grid-row: 3;
+  grid-column: 1;
 }
 
 #inner-scale-A-flat {
-    grid-row: 1;
-    grid-column: 3;
+  grid-row: 1;
+  grid-column: 3;
 }
 
 #scale-E-flat {
-    grid-row: 3;
-    grid-column: 1;
+  grid-row: 3;
+  grid-column: 1;
 }
 
 #outer-scale-E-flat {
-    grid-row: 2;
-    grid-column: 1;
+  grid-row: 2;
+  grid-column: 1;
 }
 
 #inner-scale-E-flat {
-    grid-row: 2;
-    grid-column: 3;
+  grid-row: 2;
+  grid-column: 3;
 }
 
 #scale-B-flat {
-    grid-row: 2;
-    grid-column: 1;
-    left: 3vw;
+  grid-row: 2;
+  grid-column: 1;
+  left: 3vw;
 }
 
 #outer-scale-B-flat {
-    grid-row: 1;
-    grid-column: 1;
+  grid-row: 1;
+  grid-column: 1;
 }
 
 #inner-scale-B-flat {
-    grid-row: 3;
-    grid-column: 3;
+  grid-row: 3;
+  grid-column: 3;
 }
 
 #scale-F {
-    grid-row: 1;
-    grid-column: 2;
-    top: 3vw;
+  grid-row: 1;
+  grid-column: 2;
+  top: 3vw;
 }
 
 #outer-scale-F {
-    grid-row: 1;
-    grid-column: 1;
+  grid-row: 1;
+  grid-column: 1;
 }
 
 #inner-scale-F {
-    grid-row: 3;
-    grid-column: 3;
+  grid-row: 3;
+  grid-column: 3;
 }
 
 .inner-circle {
-    /* border: solid red; */
-    border-radius: 100vw;
-    grid-row: 2 / 5;
-    grid-column: 2 / 5;
+  /* border: solid red; */
+  border-radius: 100vw;
+  grid-row: 2 / 5;
+  grid-column: 2 / 5;
 }
