--- a/src/index.css
+++ b/src/index.css
@@ -6,18 +6,35 @@
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
   font-family: sans-serif;
   font-weight: 400;
   line-height: 1;
-  color: #333;
+  color: #444;
+
+  overflow-x: hidden;
+}
+
+.screen {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.main,
+.App,
+.fretboard-app {
+  height: 100%;
 }
 
 header {
   height: 8rem;
   display: flex;
+  flex-shrink: 0;
   justify-content: center;
   align-items: center;
   background-color: #2a6041;
@@ -38,6 +55,14 @@ footer {
   color: whitesmoke;
   font-size: 1.8rem;
   padding: 2rem 0;
+  /* justify-self: flex-end; */
+  /* margin: auto 0 0 0; */
+}
+
+.sub-app {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .repository-link:link,
@@ -55,30 +80,38 @@ footer {
   /* border-bottom: whitesmoke solid 1px; */
 }
 
+.mobile-and-decktop-ui {
+  padding: 2rem 0;
+}
+
 .fretboard-app {
-  /* min-height: 85vh; */
+  height: 100%;
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
-  gap: 2rem;
+  justify-content: space-between;
+  /* gap: 3.2rem; */
 }
 
 .sequence {
-  margin: 0 auto;
-  max-width: 90vw;
+  /* margin: 2rem auto; */
+  /* max-width: 90vw; */
   font-size: 3.2rem;
   font-weight: 600;
   text-align: center;
+  padding: 2rem 0;
 }
 
-.inner-instrument-container {
+.instrument-container {
+  /* margin: auto 0; */
   display: flex;
   justify-content: center;
 }
 
 .fretboard {
-  /* margin: 0 auto; */
-  /* align-self: center; */
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+  /* margin-bottom: 8rem; */
 }
 
 .string {
@@ -112,7 +145,7 @@ footer {
 }
 
 .fretNumContainer {
-  width: 5.5rem;
+  width: 7rem;
 
   font-size: 1.4rem;
   display: inline-block;
@@ -134,20 +167,20 @@ footer {
   color: whitesmoke;
   position: relative;
   top: 50%;
-  font-size: 1.8rem;
+  font-size: 2rem;
 }
 
 .note {
-  width: 3.4rem;
-  height: 3.4rem;
+  width: 5rem;
+  height: 5rem;
   border-radius: 50%;
 }
 
 .root-note {
-  width: 3.6rem;
-  height: 3.6rem;
+  width: 5.2rem;
+  height: 5.2rem;
   border-radius: 50%;
-  border: solid 0.2rem;
+  border: solid 0.4rem;
 }
 
 .noteContainer {
@@ -156,47 +189,56 @@ footer {
   align-items: center;
   box-sizing: border-box;
   /* min-width: 3.2vw; */
-  width: 5.5rem;
-  height: 4.8rem;
+  width: 7rem;
+  height: 6.4rem;
   border-right: solid whitesmoke 2px;
 }
 
 .string-container {
   display: flex;
+  align-items: end;
 }
 
 .open-string {
+  /* border: none; */
   position: relative;
-  top: 1.6vw;
-  border: none;
-  font-size: 3vh;
-  width: 3vw;
+  top: 1.2rem;
+  font-size: 2.4rem;
+  width: 4rem;
 }
 
 .mobile-ui {
   display: none;
   flex-direction: row;
   flex-wrap: wrap;
-  min-width: 100vw;
+  /* min-width: 100vw; */
 }
 
 .dropdown {
-  min-width: 50%;
-  box-sizing: border-box;
-  height: 6vh;
-  font-size: 5vw;
+  width: 50%;
+  /* box-sizing: border-box; */
+  height: 4.8rem;
+  font-size: 2.4rem;
   text-align: center;
   background-color: #2a6041;
   color: whitesmoke;
-  border: none;
+  /* border: none; */
   border-bottom: whitesmoke solid 1px;
   border-right: whitesmoke solid 1px;
 }
 
 @media only screen and (orientation: landscape) {
   @media only screen and (max-width: 1024px) {
+    html {
+      /* font-size: 45%; */
+    }
+
+    /* .App {
+      height: 100vh;
+    } */
+
     .fretboard-app {
-      min-height: 95vh;
+      /* height: 100%; */
     }
     .ui-and-info {
       display: none;
@@ -206,16 +248,36 @@ footer {
       flex-wrap: nowrap;
     }
     .dropdown {
-      min-width: 25vw;
+      width: 25%;
     }
-    header {
+    /* header {
       display: none;
-    }
+    } */
     .dropdown {
-      height: 10vh;
-      font-size: 3.8vh;
+      height: 4.8rem;
+      font-size: 3.2rem;
     }
   }
+
+  .fretboard {
+    /* overflow: scroll; */
+  }
+
+  /* Stopped here */
+
+  /* .noteContainer {
+    width: 3.8rem;
+  } */
+
+  /* .fretNumContainer {
+    width: 3.8rem;
+  }
+
+  .note,
+  .root-note {
+    width: 3.2rem;
+    height: 3.2rem;
+  } */
 }
 
 @media screen and (orientation: portrait) {
@@ -318,38 +380,36 @@ main,
 .select-sequence,
 .sequence-panel {
   display: flex;
-  margin-bottom: 1vh;
+  margin-bottom: 1rem;
   justify-content: center;
-  gap: 0.5vw;
+  gap: 1rem;
 }
 
 .select-instrument button {
-  height: 3vw;
-  width: 12vw;
-  font-size: 0.9vw;
+  height: 4rem;
+  width: 20rem;
+  font-size: 1.6rem;
 }
 
 .select-note button {
-  width: 2.5vw;
-  height: 2.5vw;
-  font-size: 0.9vw;
+  width: 3.4rem;
+  height: 3.4rem;
 }
 
 .select-sequence button {
-  width: 10vw;
-  height: 2vw;
-  font-size: 0.9vw;
+  width: 16rem;
+  height: 3rem;
 }
 
 .sequence-panel button {
-  font-size: 0.9vw;
-  padding: 0.25vw;
+  padding: 0.5rem;
 }
 
 button {
   color: black;
   border: none;
-  border-radius: 0.5vw;
+  border-radius: 0.75rem;
+  font-size: 1.6rem;
 }
 
 button:hover {
